--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "src/bower_components"
   ],
   "dependencies": {
     "angular": "^1.5.8",
