--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,12 @@
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
     "bootstrap": "^3.3.7",
-    "angular-ui-bootstrap": "^2.0.1"
+    "angular-ui-bootstrap": "^2.1.3",
+    "angular-animate": "^1.5.8",
+    "angular-touch": "^1.5.8",
+    "angular-sanitize": "^1.5.8"
+  },
+  "devDependencies": {
+    "angular-local-storage": "^0.5.0"
   }
 }
