--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9",
-    "http-server": "^0.9.0"
+    "http-server": "^0.9.0",
+    "run-sequence": "^1.2.2"
   }
 }
